--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -63,7 +63,7 @@
                                    Foreground="{Binding Path=RoleBrush}" FontSize="12" Margin="5,3"/>
                     </StackPanel>
                     <TextBlock DataContext="{Binding}"
-                               Text="{Binding Path=CorrectedTimestamp, StringFormat=HH:mm:ss}" 
+                               Text="{Binding Path=CorrectedTimestamp}" 
                                HorizontalAlignment="Right" 
                                VerticalAlignment="Top" FontSize="16" Foreground="#ff6f8f8f"/>
                     <ItemsControl DataContext="{Binding}" ItemsSource="{Binding Path=Split}" 
@@ -198,12 +198,16 @@
                                     <ItemsControl ItemsSource="{Binding Path=ExtClouds}" Margin="5">
                                         <ItemsControl.ItemTemplate>
                                             <DataTemplate>
-                                                <StackPanel Orientation="Horizontal" Margin="2">
-                                                    <Image Source="{Binding Path=avatar.Normal}"
+                                                <Button DataContext="{Binding}" Style="{StaticResource XTiltButtonStyle}"
+                                                        HorizontalAlignment="Left" BorderBrush="Transparent" Padding="-10"
+                                                        Click="UserCloudClick">
+                                                    <StackPanel Orientation="Horizontal" Margin="2">
+                                                        <Image Source="{Binding Path=avatar.Normal}"
                                                            Width="50" Height="50" Margin="0,0,5,0" />
-                                                    <TextBlock Text="{Binding Path=name}" Foreground="#FF444444"
+                                                        <TextBlock Text="{Binding Path=name}" Foreground="#FF444444"
                                                                VerticalAlignment="Center" FontSize="24"/>
-                                                </StackPanel>
+                                                    </StackPanel>
+                                                </Button>
                                             </DataTemplate>
                                         </ItemsControl.ItemTemplate>
                                     </ItemsControl>
