--- a/Home.xaml
+++ b/Home.xaml
@@ -6,8 +6,8 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Controls="clr-namespace:Cloudsdale.Controls" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Segoe WP Bold"
     FontSize="28"
     Foreground="Black"
@@ -20,6 +20,27 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="XamlResources.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <DataTemplate x:Key="CloudsTemplate">
+                <Button Click="CloudClick" DataContext="{Binding}" Style="{StaticResource XTiltButtonStyle}"
+                        HorizontalAlignment="Left" BorderBrush="Transparent" Padding="-10">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Image Source="{Binding Path=avatar.Preview}" Width="50" Height="50" Margin="0,0,5,0" />
+                        <TextBlock Text="{Binding name}" Foreground="Black" FontSize="30" />
+                    </StackPanel>
+                </Button>
+            </DataTemplate>
+            <DataTemplate x:Key="MyCloudsTemplate">
+                <Button Click="CloudClick" DataContext="{Binding}" Style="{StaticResource XTiltButtonStyle}"
+                        HorizontalAlignment="Left" BorderBrush="Transparent" Padding="-10">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Grid>
+                            <Image Source="{Binding Path=avatar.Preview}" Width="50" Height="50" Margin="0,0,5,0" />
+                            <Controls:CountDisplay Count="{Binding Path=Controller.Unread}" Margin="-25,-25,0,0" />
+                        </Grid>
+                        <TextBlock Text="{Binding name}" Foreground="Black" FontSize="30" />
+                    </StackPanel>
+                </Button>
+            </DataTemplate>
         </ResourceDictionary>
     </phone:PhoneApplicationPage.Resources>
 
@@ -40,7 +61,9 @@
                             </Image.Clip>
                         </Image>
                         <StackPanel>
-                            <TextBlock Margin="10,0,0,0" Foreground="#FF202020"><Run Text="{Binding Path=name}" /></TextBlock>
+                            <TextBlock Margin="10,0,0,0" Foreground="#FF202020">
+                                <Run Text="{Binding Path=name}" />
+                            </TextBlock>
                             <Button Content="Logout" Foreground="#FF202020" BorderBrush="#FF202020" Margin="0"
                                 HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Click="LogoutClick" />
                         </StackPanel>
@@ -56,7 +79,7 @@
             <controls:PivotItem Header="Clouds">
                 <Grid Margin="-12,-26,-12,0">
                     <ScrollViewer Margin="12,0,12,50">
-                        <ItemsControl x:Name="CloudList" Margin="0,15,0,0" />
+                        <ItemsControl x:Name="CloudList" Margin="0,15,0,0" ItemTemplate="{StaticResource MyCloudsTemplate}" />
                     </ScrollViewer>
                     <Button VerticalAlignment="Bottom" BorderBrush="Transparent" Margin="0,0,0,2" 
                             Height="50" Padding="-25" Width="50"
@@ -68,28 +91,22 @@
             <controls:PivotItem Header="Explore" Foreground="Black">
                 <Grid>
                     <Grid Margin="-12,-26,-12,-30" Height="110" VerticalAlignment="Top">
-                        <TextBox VerticalAlignment="Top" Margin="0,0,75,0" BorderBrush="#888888" />
+                        <TextBox VerticalAlignment="Top" Margin="0,0,75,0" BorderBrush="#888888" Name="SearchQuery" />
                         <Button VerticalAlignment="Top" HorizontalAlignment="Right" 
                                 BorderBrush="Transparent" Margin="0,-9"
-                                Style="{StaticResource XTiltButtonStyle}">
+                                Style="{StaticResource XTiltButtonStyle}"
+                                Click="SearchClick">
                             <Image Source="/Images/Icons/search.png" Width="50" />
                         </Button>
                     </Grid>
                     <ScrollViewer Margin="0,54,0,50">
-                        <ItemsControl x:Name="searchResults">
-                            <TextBlock Text="Loading..." />
-                        </ItemsControl>
+                        <ItemsControl x:Name="searchResults" ItemTemplate="{StaticResource CloudsTemplate}" />
                     </ScrollViewer>
-                    <Button VerticalAlignment="Bottom" BorderBrush="Transparent" Margin="0,0,0,2" 
-                            Height="50" Padding="-25" Width="50" Click="ExploreRefreshClick"
-                            Style="{StaticResource XTiltButtonStyle}">
-                        <Image Source="/Images/Icons/refresh.png" Width="50" Height="50" />
-                    </Button>
                     <Button VerticalAlignment="Bottom" HorizontalAlignment="Left" Content="Popular" 
-                            Foreground="Black" BorderBrush="Black" Width="175" Margin="30,-8" 
+                            Foreground="Black" BorderBrush="Black" Width="175" Margin="50,-8" 
                             Click="PopularClick" />
                     <Button VerticalAlignment="Bottom" HorizontalAlignment="Right" Content="Recent" 
-                            Foreground="Black" BorderBrush="Black" Width="175" Margin="30,-8" 
+                            Foreground="Black" BorderBrush="Black" Width="175" Margin="50,-8" 
                             Click="RecentClick" />
                 </Grid>
             </controls:PivotItem>
