--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -262,7 +262,7 @@
                             <Grid>
                                 <StackPanel Margin="5">
                                     <StackPanel Orientation="Horizontal" MaxWidth="440">
-                                        <Image Source="{Binding Path=avatar.Normal}">
+                                        <Image Source="{Binding Path=avatar.Normal}" Width="100" Height="100">
                                             <Image.Clip>
                                                 <RectangleGeometry Rect="0,0,100,100" RadiusX="20" RadiusY="20" />
                                             </Image.Clip>
