--- a/Home.xaml
+++ b/Home.xaml
@@ -15,7 +15,7 @@
     Foreground="Black"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    shell:SystemTray.Opacity="0.01">
+    shell:SystemTray.Opacity="0">
 
     <phone:PhoneApplicationPage.Resources>
         <ResourceDictionary>
@@ -47,51 +47,29 @@
                 </DataTemplate>
             </controls:Pivot.HeaderTemplate>
             <controls:PivotItem Header="Home" Foreground="#FF2A81DB">
-                <ScrollViewer Margin="0,-26,0,0">
-                    <StackPanel x:Name="UserInfoPane">
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="{Binding Path=avatar.Normal}" Width="100" Height="100" 
+                <Grid x:Name="UserInfoPane" Margin="0,-20,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{Binding Path=avatar.Normal}" Width="100" Height="100" 
                                HorizontalAlignment="Left" VerticalAlignment="Top">
-                                <Image.Clip>
-                                    <RectangleGeometry RadiusX="10" RadiusY="10" Rect="0,0,100,100" />
-                                </Image.Clip>
-                            </Image>
-                            <StackPanel>
-                                <TextBlock Margin="10,0,0,0" Foreground="#FF202020">
+                            <Image.Clip>
+                                <RectangleGeometry RadiusX="5" RadiusY="5" Rect="0,0,100,100" />
+                            </Image.Clip>
+                        </Image>
+                        <StackPanel>
+                            <TextBlock Margin="10,0,0,0" Foreground="#FF202020">
                                 <Run Text="{Binding Path=name}" />
-                                </TextBlock>
-                                <Button Content="Logout" Foreground="#FF202020" BorderBrush="#FF202020" Margin="0"
+                            </TextBlock>
+                            <Button Content="Logout" Foreground="#FF202020" BorderBrush="#FF202020" Margin="0"
                                 HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="20" Click="LogoutClick" />
-                            </StackPanel>
                         </StackPanel>
-                        <TextBlock TextWrapping="Wrap" FontSize="34"
-                               Text="Welcome back to cloudsdale!"
-                               Margin="0,0,0,20" />
-                        <TextBlock TextWrapping="Wrap" FontSize="18">
-                        You have been a member since <Run Text="{Binding Path=member_since,
-                                                          StringFormat='MMMM dd, yyyy'}" />
-                        </TextBlock>
-                        <ItemsControl x:Name="CloudList" Margin="0,15,0,0">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <toolkit:WrapPanel Orientation="Horizontal" />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <mycontrols:TiltGrid mycontrols:TiltEffect.IsTiltEnabled="True">
-                                        <toolkit:HubTile
-                                            Title="{Binding Path=name}" Margin="3"
-                                            Source="{Binding Path=avatar.Normal}"
-                                            Background="#FFD0D0D0" Style="{StaticResource HubTileStyle0}"
-                                            Tap="CloudTap">
-                                        </toolkit:HubTile>
-                                    </mycontrols:TiltGrid>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
                     </StackPanel>
-                </ScrollViewer>
+                    <mycontrols:CloudTileManager Grid.Row="1" x:Name="CloudList" Margin="0,5,0,0" Loaded="CloudListLoaded"
+                                                 CloudClicked="CloudClicked"/>
+                </Grid>
             </controls:PivotItem>
             <controls:PivotItem Header="Explore" Foreground="Black">
                 <Grid>
